# inscription-server

./: .gitignore  MANIFEST.in  README.rst  SIMPLE.txt  pyproject.toml.bk  setup.cfg
senescribe/: __init__.py  blog.py  schema.sql  subscription.py  validators.py
senescribe/controller/: __init__.py  auth.py  blog.py  fun.py  inscription.py
senescribe/model/: __init__.py  auth.py  blog.py  inscription.py
senescribe/static/fun/: game.js
senescribe/static/fun/engine/: init.js  keymap.js  loop.js  physics.js  rendering.js
senescribe/static/snake/: game.js  style.css
senescribe/templates/: base.html
senescribe/templates/auth/: login.html  register.html
senescribe/templates/creneau/: index.html
senescribe/templates/fun/: index.html  snake.html
senescribe/templates/inscription/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_inscription.py
tests/model/: test_grimpeur.py
