[metadata]
name = senescribe
version = 0.1.0
url = https://scribe.senescalade.bzh/
license = BSD-3-Clause
maintainer = Tresorier
maintainer_email = tresorier@senescalade.bzh
description = "Outil de gestion des inscriptions pour l'association Senescalade."
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask==2.3.2

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    senescribe
